--- a/templates/repos-card.html
+++ b/templates/repos-card.html
@@ -6,7 +6,7 @@
                 <div class="col">
                     <div class="card h-100">
                         <div class="card-body" style="color: black;">
-                            <a href="https://{{ repo.url }}"><h5 class="card-title">{{ repo.repo_name }}</h5></a>
+                            <a href="{{ url_for('repo_repo_view', id=repo.repo_id) }}"><h5 class="card-title">{{ repo.repo_name }}</h5></a>
                             <p class="card-text">Repository Status: {{ repo.repo_status }}</p>
                             <p class="card-text">All Time Commits: {{ repo.commits_all_time|int }}</p>
                             <p class="card-text">All Time Issues: {{ repo.issues_all_time|int }}</p>
