--- a/templates/repo-info.html
+++ b/templates/repo-info.html
@@ -21,37 +21,42 @@
         {% endfor %}
         {% endfor %}
         {% else %}
-        <h1 id="message">{{ 'Repository id not found'|replace("id", repo_id) }}<h1>
+        <h1 id="message">Repository {{ repo_id }} not found<h1>
         {% endif %}
     </div>
 </div>
 {% if repo.repo_id %}
+{# Wait for cache response:
+    This method queries the server from the client, asking for confirmation
+    of which images are available on the server. The server will asynchronously
+    download the requested images as the page is loading, then once the page
+    loads, the client will query a locking endpoint on the server and wait
+    for a response.
+#}
 <script type="text/javascript">
-    {# Wait for cache response:
-        This method queries the server from the client, asking for confirmation
-        of which images are available on the server. The server will asynchronously
-        download the requested images as the page is loading, then once the page
-        loads, the client will query a locking endpoint on the server and wait
-        for a response.
-    #}
     $.getJSON("{{ url_for('wait_for_request', id=repo_id) }}", function(image_data) {
-        // var reports = JSON.parse('\{\{ reports | tojson \}\}');
+        // Collect all placeholder images to be replaced with their visualizations
         var image_placeholders = document.getElementsByClassName("img_placeholder");
         for(let index = 0; index < image_placeholders.length; ++index) {
             let div = image_placeholders[index].children[0];
             if(typeof div != "object") {
+                // For some reason, extraneous elements are collected
                 continue;
             }
+            // Remove the class which enables the "loading" animation
             div.classList.remove("dot-flashing");
+            // Create a backup image for non-existent visualizations
             var backup = document.createElement("img");
             backup.setAttribute("src", "{{ url_for('static', filename= 'img/auggie_shrug.png') }}");
             backup.setAttribute("class", "img-fluid");
+            // If a visualization failed to load, this dictionary entry is False
             if(image_data['images'][div.id]['exists']) {
+                // The ID of each div was set to the ID of its intended image
                 var image = document.createElement("img");
                 image_path = "{{ url_for('cache') }}" + image_data['images'][div.id]['filename'];
-                console.log(image_path);
                 image.setAttribute("src", image_path);
                 image.setAttribute("class", "img-fluid");
+                // Dynamically trigger the image modal when clicked
                 image.setAttribute("onclick", "displayModal(\"report_image_" + div.id + "\")");
                 image.setAttribute("id", "report_image_" + div.id);
                 image.setAttribute("data-toggle", "tooltip");
@@ -80,8 +85,7 @@
 
 <!-- The Modal -->
 <div id="imageModal" class="modal">
-  <!-- <span class="close">&times;</span> -->
-  <h1 id="caption"></h1>
+  <h1 id="modalTitle"></h1>
   <img class="modal-content" id="img01">
   <div id="close-caption">press ESC to close</div>
 </div>
@@ -91,26 +95,29 @@
         // Get the modal
         var modal = document.getElementById("imageModal");
 
-        // Get the image and insert it inside the modal - use its "alt" text as a caption
+        // Get the image and compose it - use its "alt" text as a caption
         var img = document.getElementById(id);
         var modalImg = document.getElementById("img01");
-        var captionText = document.getElementById("caption");
-
+        var captionText = document.getElementById("modalTitle");
         var description = document.getElementById("desc_" + id)
 
+        // Set the modal to cover the full window and show the requested image
         modal.style.display = "block";
         modalImg.src = img.src;
         captionText.innerHTML = description.innerHTML;
 
-        // Get the <span> element that closes the modal
-        // var span = document.getElementsByClassName("close")[0];
-
         // When the user clicks on the modal background, close the modal
-        modal.onclick = function() {
-            modal.style.display = "none";
-        }
+        modal.addEventListener('click', e => {
+            if(e.target !== e.currentTarget) {
+                // Do not close the modal if the image or title are clicked
+                return;
+            } else {
+                modal.style.display = "none";
+            }
+        });
     }
 
+    // Allow the user to also close the modal by pressing ESC
     window.addEventListener("keydown", function(event) {
     	if(document.getElementById("imageModal").style.display == "block") {
     	    if(event.code == "Escape") {
