--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,16 @@
     {% endif %}
 </head>
 
-<body>
+<body>{#
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        <ul class=flashes>
+        {% for message in messages %}
+          <li>{{ message }}</li>
+        {% endfor %}
+        </ul>
+      {% endif %}
+    {% endwith %} #}
     <!-- TOPNAV -->
     {% include 'navbar.html' %}
 
