--- a/templates/login.html
+++ b/templates/login.html
@@ -1,18 +1,20 @@
 <div class="container-fluid mt-4">
     <div class="row justify-content-center">
-        <form class="form-signin" style="width: 400px;">
+        <form class="form-signin" style="width: 400px;" method="post" action="{{ url_for('user_login') }}">
             <h1 class="h3 mb-3 font-weight-normal">User Login</h1>
             <hr/>
-            <label for="inputEmail" class="sr-only">Email address</label>
-            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-            <label for="inputPassword" class="sr-only">Password</label>
+            <input type="text" id="userID" name="userID" class="form-control" placeholder="User ID" required autofocus>
+            <br>
             <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+            <br>
             <div class="checkbox mb-3">
                 <label>
                     <input type="checkbox" value="remember-me">Remember me</input>
                 </label>
             </div>
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+            <div class="btn" style="background-color: var(--color-accent); padding: 0; margin: 0;">
+                <button class="btn btn-outline-dark" style="color: white;" type="submit">Sign in</button>
+            </div>
         </form>
     </div>
 </div>
