--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #6f42c1;">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: var(--color-accent);">
     <div class="container-fluid">
         <!-- BRAND LOGO -->
         <a class="navbar-brand nav-image" href="{{ url_for('root') }}"><img src="{{ url_for('logo') }}" class="img-fluid nav-img" alt="augur Logo"></a>
@@ -34,6 +34,7 @@
                 </li>
                 <!-- .junk->NAVBAR_EXTRAS -->
             </ul>
+            {% if session['userID'] %} <p style="color: white">Welcome, {{session['userID']}} &nbsp;&nbsp;&nbsp;&nbsp;</p> {% endif %}
             <form class="d-flex" method="get" action="?">
                 <input class="form-control me-2" name="q" type="search" placeholder="Filter Repos" aria-label="Search" value="{{query_key or ''}}">
                 <button class="btn btn-outline-dark" type="submit" style="color: white;">Search</button>
