--- a/templates/groups-table.html
+++ b/templates/groups-table.html
@@ -1,5 +1,5 @@
 {% if groups %}
-    <div class="rounded" style="background-color: white; overflow-y: auto;">
+    <div class="rounded display-table w3-animate-opacity">
         <table class="table table-striped table-bordered">
             <thead>
                 <tr>
