--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,8 +7,8 @@
         </button>
 
         <!-- DECORATIVE SEPARATOR (hidden on mobile) -->
-        <div class="rounded nav-separator collapse navbar-collapse">&nbsp;</div>
-        <span class="collapse navbar-collapse" style="width: 10px;"></span>
+        <div class="rounded nav-separator collapse navbar-collapse d-flex">&nbsp;</div>
+        <span class="collapse navbar-collapse" style="max-width: 10px;"></span>
 
         <!-- NAVBAR CONTENT -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
