--- a/templates/repos-table.html
+++ b/templates/repos-table.html
@@ -32,7 +32,7 @@
     {"title" : "Commits", "key" : "commits_all_time"},
     {"title" : "Issues", "key" : "issues_all_time"},
     {"title" : "Change Requests"}] -%}
-<div class="rounded w3-animate-opacity" style="background-color: white; overflow: auto;">
+<div class="display-table rounded w3-animate-opacity">
     <table class="table table-striped table-bordered">
         <!-- Table header start -->
         <thead>
