--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -16,7 +16,7 @@
                 <!-- COLLAPSABLE NAVBAR SECTION -->
 
                 {% if session['userID'] %}
-                <li class="nav-item dropdown user_dropdown">
+                <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         {{ session['userID'] }}
                     </a>
