--- a/templates/repo-info.html
+++ b/templates/repo-info.html
@@ -1,3 +1,4 @@
+<script src="https://www.gstatic.com/charts/loader.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 <div class="container-fluid mt-4">
@@ -5,21 +6,8 @@
         {% if repo.repo_id %}
         <h1 id="message">Report for: {{ repo.repo_name|title }}</h1>
         <p><a href="https://{{ repo.url }}" target="_blank" data-toggle="tooltip" title="opens in new tab">https://{{ repo.url }}</a></p>
-        {% for report in reports %}
-        <h2>{{ report|replace("_", " ")|title }}</h2>
-        {% for image in images[report] %}
-        <div class="row row-cols-1 col-auto g-3" style="margin-bottom: 30px;">
-            <div class="col">
-                <div class="card img_placeholder d-flex justify-content-center align-items-center">
-                    <div class="dot-flashing" id="{{ image['id'] }}"></div>
-                </div>
-                <div class="card-footer card-footer-wrap">
-                    <small class="text-muted" id="desc_report_image_{{ image['id'] }}">{{ image['description'] }}</small>
-                </div>
-            </div>
-        </div>
-        {% endfor %}
-        {% endfor %}
+        <h2>Contributor Reports</h2>
+        <div id="pie_chart" style="width: 900px; height: 500px;"></div>
         {% else %}
         <h1 id="message">Repository {{ repo_id }} not found<h1>
         {% endif %}
@@ -32,97 +20,50 @@
     download the requested images as the page is loading, then once the page
     loads, the client will query a locking endpoint on the server and wait
     for a response.
-#}
-<script type="text/javascript">
-    $.getJSON("{{ url_for('wait_for_request', id=repo_id) }}", function(image_data) {
-        // Collect all placeholder images to be replaced with their visualizations
-        var image_placeholders = document.getElementsByClassName("img_placeholder");
-        for(let index = 0; index < image_placeholders.length; ++index) {
-            let div = image_placeholders[index].children[0];
-            if(typeof div != "object") {
-                // For some reason, extraneous elements are collected
-                continue;
-            }
-            // Remove the class which enables the "loading" animation
-            div.classList.remove("dot-flashing");
-            // Create a backup image for non-existent visualizations
-            var backup = document.createElement("img");
-            backup.setAttribute("src", "{{ url_for('static', filename= 'img/auggie_shrug.png') }}");
-            backup.setAttribute("class", "img-fluid");
-            // If a visualization failed to load, this dictionary entry is False
-            if(image_data['images'][div.id]['exists']) {
-                // The ID of each div was set to the ID of its intended image
-                var image = document.createElement("img");
-                image_path = "{{ url_for('cache') }}" + image_data['images'][div.id]['filename'];
-                image.setAttribute("src", image_path);
-                image.setAttribute("class", "img-fluid");
-                // Dynamically trigger the image modal when clicked
-                image.setAttribute("onclick", "displayModal(\"report_image_" + div.id + "\")");
-                image.setAttribute("id", "report_image_" + div.id);
-                image.setAttribute("data-toggle", "tooltip");
-                image.setAttribute("title", "Click to expand");
-                div.appendChild(image);
-            } else {
-                div.appendChild(backup);
-            }
+#}<script type="text/javascript">
+    function loadCharts() {
+
+        let repo_id = get_repo_id()
+        var pie_chart_params = {
+            "repo_id": repo_id,
+            "return_data": "true"
         }
-    });
-</script>
-{% endif %}
-<div class="modal" id="viewImg" tabindex="-1" role="dialog">
-    <div class="modal-dialog modal-fullscreen">
-        <div class="modal-content">
-            <div class="modal-body">
-                <div id="imgViewer" style="overflow-x: scroll;">
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
 
-<!-- The Modal -->
-<div id="imageModal" class="modal">
-  <h1 id="modalTitle"></h1>
-  <img class="modal-content" id="img01">
-  <div id="close-caption">press ESC to close</div>
-</div>
+        $.getJSON("{{ api_url }}/contributor_reports/returning_contributors_pie_chart/", pie_chart_params, function (response) {
 
-<script>
-    function displayModal(id) {
-        // Get the modal
-        var modal = document.getElementById("imageModal");
+            let data = response["data"]
 
-        // Get the image and compose it - use its "alt" text as a caption
-        var img = document.getElementById(id);
-        var modalImg = document.getElementById("img01");
-        var captionText = document.getElementById("modalTitle");
-        var description = document.getElementById("desc_" + id)
+            let keys = Object.keys(data)
 
-        // Set the modal to cover the full window and show the requested image
-        modal.style.display = "block";
-        modalImg.src = img.src;
-        captionText.innerHTML = description.innerHTML;
+            console.log(data)
 
-        // When the user clicks on the modal background, close the modal
-        modal.addEventListener('click', e => {
-            if(e.target !== e.currentTarget) {
-                // Do not close the modal if the image or title are clicked
-                return;
-            } else {
-                modal.style.display = "none";
+            var table_data = new google.visualization.DataTable();
+
+            table_data.addColumn('string', 'Contributor Type');
+            table_data.addColumn('number', 'Percentage');
+
+            for (var i = 0; i < keys.length; i++) {
+                key = keys[i]
+                table_data.addRow([key, data[key]])
             }
+
+            var options = {
+            title: 'Returning Contributors Pie Chart'
+            };
+
+            var chart = new google.visualization.PieChart(document.getElementById('pie_chart'));
+
+            chart.draw(table_data, options);
         });
     }
 
-    // Allow the user to also close the modal by pressing ESC
-    window.addEventListener("keydown", function(event) {
-    	if(document.getElementById("imageModal").style.display == "block") {
-    	    if(event.code == "Escape") {
-    		document.getElementById("imageModal").style.display = "none"
-    	    }
-    	}
-    }, true);
+    function get_repo_id(){
+        var url_array = window.location.href.split("/");
+        var repo_id = url_array[url_array.length - 1];
+        return repo_id
+    }
+    // Load Gchart packages and render charts
+    google.charts.load('current', { packages: ['corechart', 'bar', 'timeline', 'controls'] });
+    google.charts.setOnLoadCallback(loadCharts);
 </script>
+{% endif %}
