--- a/templates/index.html
+++ b/templates/index.html
@@ -30,9 +30,11 @@
 </head>
 
 <body>
+    <!-- React Packages -->
+    <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
     <!-- TOPNAV -->
     {% include 'navbar.html' %}
-
     <!-- body-content -->
     <div class="content">
         {% if body %}
@@ -60,6 +62,6 @@
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-
+    
 </body>
 </html>
